# churn-x

./: .gitignore  CONTRIBUTING.md  README.MD  app.py  main.py  pyproject.toml  selected_customers.txt
.github/workflows/: main.yml
agent/: Dockerfile  app.py  exception.py  offer_generation.py
agent/api/: service.py
agent/services/: offer_generation.py
etl/: constants.py  dag.py  data_loader.py  load.py  main.py  transform.py
mcp_server/: config.py  database.py  main.py
mcp_server/cloud/: s3_syncer.py
mcp_server/constants/: __init__.py
mcp_server/db/: mongo_client.py  postgres_client.py
mcp_server/exception/: __init__.py
mcp_server/models/: get_model.py  model.pkl
mcp_server/tools/: get_customer_business_data.py  get_customer_personal_data.py  get_offers.py  get_prediction.py
mcp_server/utils/: main_utils.py  s3_loader.py
ml/: Dockerfile  README.md  app.py  exception.py  main.py
ml/cloud/: s3_syncer.py
ml/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
ml/configuration/: mongo_db_connection.py  schema.yaml
ml/constants/: database.py
ml/constants/training_pipeline/: __init__.py
ml/data_access/: telco_data.py
ml/entity/: artifact_entity.py  config_entity.py
ml/exception/: __init__.py
ml/notebooks/: eda.ipynb  feature_engineering.ipynb  model_training.ipynb  test.ipynb
ml/notebooks/artifacts/eda/: test_df.csv  train_df.csv
ml/pipeline/: prediction.py  training_pipeline.py
ml/saved_models/1758387641/: model.joblib
ml/utils/: main_utils.py  ml_utils.py
ml/utils/ml_utils/: estimator.py  metric.py
telcoDB/: seed_db.py
telcoData/: README.md  Telco_customer_churn.xlsx  cleaned_Telco_customer_churn.csv  test_Telco_customer_churn.csv  train_Telco_customer_churn.csv
telcoData/raw/: Telco_customer_churn.csv
telcoData/transformed/: Telco_customer_churn.csv
(+11 files in other folders)
