[project]
name = "churn-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.8.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
